grafana-prometesus/k8s/ingress/promethus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promethus-ingress
  namespace: gf-space
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.bookserver.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-service
            port: 
              number: 9090
  - host: prometheus.bookserver.home
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-service
            port: 
              number: 9090
